--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 services:
   - mysql
+language: php
 
 php:
-  - 7.1
+  - 7.3
 
 mysql:
   database: drupal
@@ -11,22 +12,26 @@ mysql:
   encoding: utf8
 
 cache:
+  yarn: true
   directories:
      - $HOME/.composer/cache
      - $HOME/.drush/cache
+     - $HOME/.npm
+     - package/node_modules
 
 install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - composer global require drush/drush:8.1.* torotil/upal:1.1.3 phpunit/phpunit:6.4.* braintree/braintree_php=3.40.0
+  - composer global require drush/drush:8.1.* phpunit/phpunit:6.4.* torotil/upal:1.2.0 braintree/braintree_php=3.40.0
+  - nvm install 10.0.0
+  - npm install -g yarn
 
 before_script:
   - repo=`pwd`
   - root=$HOME/test-root
   - mysql -e 'create database drupal'
-  - php -d include_path=`pwd` -d sendmail_path=`which true` ~/.composer/vendor/bin/drush.php --yes core-quick-drupal --core=drupal-7.67 --profile=testing --no-server --db-url=mysql://root:@127.0.0.1/drupal --root=$root
+  - php -d include_path=`pwd` -d sendmail_path=`which true` ~/.composer/vendor/bin/drush.php --yes core-quick-drupal --core=drupal-7.69 --profile=testing --no-server --db-url=mysql://root:@127.0.0.1/drupal --root=$root
   - ln -s $repo $root/sites/all/modules/module_under_test
   - cd $root
-  - drush dl little_helpers-7.x-2.0-alpha6
   - drush --yes pm-enable braintree_payment
 
 script:
