--- a/package/package.json
+++ b/package/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "description": "JavaScript behavior for braintree_payment",
   "scripts": {
-    "dist": "parcel build --no-source-maps --global braintree_payment -d dist -o braintree.min.js src/main.js",
-    "dev": "parcel --global braintree_payment -d build src/index.html",
+    "dist": "parcel build --no-source-maps -d dist -o braintree.min.js src/main.js",
+    "dev": "parcel build --no-minify --no-source-maps -d dist -o braintree.js src/main.js",
+    "drupal:dist": "yarn run dist && cp dist/braintree.min.js ../braintree.js",
+    "drupal:dev": "yarn run dev && cp dist/braintree.js ../braintree.js",
+    "http": "parcel --global braintree_payment -d build src/index.html",
     "test": "mocha --require babel-core/register --ui tdd --reporter dot test",
-    "lint": "eslint src test"
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@babel/core": "^7.13",
